[package]
name = "cogboy"
version = "0.1.0"
authors = ["BeeWarloc"]

[dependencies]
enum_primitive = "*"
num = "*"
log = "*"
env_logger = "*"
minifb = "*"
portaudio = "0.7.0"
rustyline = "1.0.0"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
nom = "^1.2.3"

[profile.release]
#debug-assertions = true # controls whether debug assertions are enabled

