[package]
name = "cogboy-cli"
version = "0.1.0"
authors = ["BeeWarloc"]

[dependencies]
cogboy-core = { path = "../cogboy-core" }
enum_primitive = "*"
num = "*"
log = "*"
env_logger = "*"
minifb = "*"
portaudio = "0.7.0"
rustyline = "1.0.0"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
nom = "^1.2.3"

[profile.dev]
opt-level = 1      # controls the `--opt-level` the compiler builds with

