[package]
name = "cogboy-cli"
version = "0.2.0"
authors = ["BeeWarloc"]
edition = "2018"

[dependencies]
cogboy-core = { path = "../cogboy-core" }
enum_primitive = "*"
num = "*"
log = "*"
env_logger = "*"
minifb = "*"
portaudio = "0.7.0"
rustyline = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.8"
nom = "^1.2.3"
