[package]
name = "cogboy-cli"
version = "0.2.0"
authors = ["BeeWarloc"]
edition = "2018"

[dependencies]
cogboy-core = { path = "../cogboy-core" }
enum_primitive = "*"
num = "*"
log = "*"
env_logger = "*"
minifb = "*"
portaudio = "0.7.0"
rustyline = "9"
serde = "1"
serde_derive = "1"
bincode = "1"
nom = "^1.2"
